Remove unnecessary third party dependencies